[package]
name = "moaremotes-peak-tool"
version = "0.1.0"
edition = "2021"
authors = ["squirrel <squirrelhomebrew@gmail.com>"]
description = "helps with adding emotes and stuff!!"
license = "MIT"

[dependencies]
crossterm = "0.27"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
